<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">帧率计</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="privacy">隐私政策</string>
    <string name="privacy_policy">本软件不会收集、记录或上传您的任何信息。\n</string>
    <string name="too_small">太小啦！</string>
    <string name="all_ok">点击启动</string>
    <string name="not_ok">点击激活帧率计</string>
    <string name="activate_steps">帧率计支持adb，shizuku或root激活。\n\n请注意，帧率计仅支持安卓13+系统。\n</string>
    <string name="need_activate">激活方式</string>
    <string name="copy_cmd">复制adb命令</string>
    <string name="cmd_copy_finish">adb命令已复制到剪切板：\nadb shell %s</string>
    <string name="by_root">root激活</string>
    <string name="active_failed">激活失败</string>
    <string name="by_shizuku">Shizuku激活</string>
    <string name="shizuku_not_run">shizuku未运行</string>
    <string name="help_title">帮助</string>
    <string name="help_content">1.静态UI下，帧率可能长时间不更新。这是因为帧率计的原理是回调而非轮询。不会影响到监测游戏帧率。\n\n2.某些类原生系统的“游戏空间”带有实时帧率功能，与帧率计共用一个系统API，因而无法同时开启。\n\n3.长按帧率计的桌面图标，可查看帧率历史记录。\n\n</string>
    <string name="understand">明白</string>
    <string name="service_closed">帧率计已关闭</string>
    <string name="fw_size">悬浮窗大小</string>
    <string name="fw_tran">悬浮窗透明度</string>
    <string name="round_corner">圆角大小</string>
    <string name="float_window_permission">请开启悬浮窗权限</string>
    <string name="unzip_failed">解压失败</string>
    <string name="stop_watch">停止监测</string>
    <string name="text_size">文字大小</string>
    <string name="single_task">持续监测单个APP</string>
    <string name="question_mark">ⓘ</string>
    <string name="keep_help_content">\n让帧率计在前台APP变动时不切换监测目标。\n\n\n帧率计启动时的前台APP将被持续监测；该APP退出时，帧率计会自动关闭。\n\n\n适用场景：将游戏小窗、分屏、切后台时，帧率计能继续监测游戏帧率，而不是切换到新的前台APP帧率。\n\n</string>
    <string name="start_watch_toast">开始监测</string>
    <string name="stop_watch_toast">停止监测</string>
    <string name="switch_watch_toast">切换监测</string>
    <string name="aspect_change">3:2悬浮窗长宽比</string>
    <string name="average">"平均: "</string>
    <string name="saved_to">保存帧率文件至: </string>
    <string name="save_failed">"保存失败: "</string>
    <string name="never_show_again">不再显示</string>
    <string name="enable_float_window">启用帧率悬浮窗</string>
    <string name="enable_notification">启用帧率通知</string>
    <string name="enable_notification_content">\n启用帧率通知后，帧率会实时显示到通知和通知图标。\n\n点击通知可以启动帧率录制。</string>
    <string name="enable_float_window_content">\n启用帧率悬浮窗后，帧率会实时显示到悬浮窗。\n\n点击悬浮窗可以启动帧率录制并展示帧率折线图。</string>
    <string name="notification_title">帧率监测启动中</string>
    <string name="notification_exit">退出</string>
    <string name="notification_record">录制</string>
    <string name="toast_start_record">开始录制帧率</string>
    <string name="toast_recording">正在录制，无需重复点击</string>
    <string name="watch_target">"正在监测: "</string>
    <string name="record_target">"正在录制: "</string>
    <string name="current_fps">"当前帧率: "</string>
    <string name="manage_record">帧率录制结果</string>
    <string name="export_toast1">导出成功</string>
    <string name="export_toast2">导出失败</string>
    <string name="cant_resolve_csv">无法解析csv文件</string>
    <string name="save_to_gallery">保存到相册</string>
    <string name="export_csv_file">导出csv文件</string>
    <string name="confirm_delete_content">将要删除的文件:\n\n%s\n\n确认删除吗？</string>
    <string name="confirm_delete_title">确认删除</string>
    <string name="delete">删除</string>
    <string name="deleted">已删除</string>
    <string name="cancel">取消</string>
    <string name="sort_by_date">日期排序</string>
    <string name="sort_by_label">名称排序</string>
    <string name="save_success">保存成功</string>
    <string name="request_perm_overlay">请开启悬浮窗权限</string>
    <string name="request_perm_notification">请开启通知权限</string>
    <string name="activate_first">请先激活帧率计</string>
    <string name="long_press_to_activate">长按激活</string>
    <string name="activate_success">激活成功</string>
    <string name="notify_fore_change">提示前台APP变动</string>
    <string name="saved">帧率记录已保存，可长按帧率计桌面图标查看</string>
    <string name="notify_fore_change_content">前台APP变动时，在帧率悬浮窗上显示APP图标，并Toast通知。</string>
    <string name="fps">FPS</string>
    <string name="avg_fps">平均%.1f</string>
    <string name="noti_channel_name">帧率监测</string>
</resources>