<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:onClick="finish"
    android:orientation="horizontal">

    <View
        android:id="@+id/left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/app_label"
            android:textColor="@color/fg"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/activate_button"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/selectground"
            android:text="@string/not_ok"
            android:textColor="@color/wrong"
            android:textSize="16sp" />


        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/lll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="end"
                        android:text="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/enable_notification" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="end"
                        android:text="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/enable_float_window" />


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/aspect_change" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="end"
                        android:text="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/notify_fore_change" />


                </RelativeLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:layout_gravity="center"
                            android:text="@string/fw_size"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/eb"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="40"
                            android:inputType="number"
                            android:selectAllOnFocus="true" />
                    </TableRow>

                    <SeekBar
                        android:id="@+id/sb"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:max="100" />


                    <TableRow>

                        <TextView
                            android:layout_gravity="center"
                            android:text="@string/fw_tran"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/ec"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="90"
                            android:inputType="number"
                            android:selectAllOnFocus="true" />
                    </TableRow>

                    <SeekBar
                        android:id="@+id/sc"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:max="100" />


                    <TableRow>

                        <TextView
                            android:layout_gravity="center"
                            android:text="@string/round_corner"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/ed"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="5"
                            android:inputType="number"
                            android:selectAllOnFocus="true" />
                    </TableRow>

                    <SeekBar
                        android:id="@+id/sd"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:max="20" />

                    <TableRow>

                        <TextView
                            android:layout_gravity="center"
                            android:text="@string/text_size"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/ee"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="16"
                            android:inputType="number"
                            android:selectAllOnFocus="true" />
                    </TableRow>

                    <SeekBar
                        android:id="@+id/se"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:max="20" />

                </TableLayout>





                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="end"
                        android:text="@string/question_mark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/single_task" />


                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <View
        android:id="@+id/right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:visibility="gone" />

</LinearLayout>